# pandabot

./: frames.gv
simple_navigation2/.svn/: wc.db
simple_navigation2/trunk/move_base_simple/src/: move_base_simple.cpp
sociobots_control/: CMakeLists.txt  package.xml
sociobots_control/config/: sociobots_control.yaml
sociobots_control/launch/: sociobots_control.launch  test_cam.launch
sociobots_control/scripts/: key_teleop.py
sociobots_deploy/: CMakeLists.txt  package.xml
sociobots_deploy/launch/: multi_new  multi_new.launch  multiple_minions.launch  single_minion.launch
sociobots_deploy/maps/: arena.yaml
sociobots_deploy/param/: costmap_common_params.yaml  local_costmap_params.yaml
sociobots_description/: CMakeLists.txt  package.xml
sociobots_description/urdf/: macros.xacro  materials.xacro  model.urdf  sociobots.gazebo  sociobots.gv  sociobots.xacro  sociobots.xacro.working  sociobots.xacro.working.with.jerk
sociobots_driver/: CMakeLists.txt  package.xml
sociobots_driver/include/sociobots_driver/: miniQ.h
sociobots_driver/scripts/: single_minion_node.py
sociobots_driver/src/: CerealPort.cpp  miniQ.cpp  miniQ.h  multi_minion.cpp  single_minion_node.cpp  tf_updater.cpp  working.backup.single_minion_node.cpp
sociobots_gazebo/: CMakeLists.txt  package.xml
sociobots_gazebo/launch/: sociobots_world.launch
sociobots_gazebo/worlds/: sociobots.world
sociobots_mobilize/: CMakeLists.txt  package.xml
sociobots_mobilize/launch/: nav.launch  single_minion.launch
sociobots_mobilize/maps/: arena.yaml~
sociobots_mobilize/param/: base.yaml  global_costmap_params.yaml
sociobots_overhead_vision/: CMakeLists.txt  package.xml
sociobots_overhead_vision/launch/: bot_markers.launch
sociobots_overhead_vision/src/: eagle_vision.cpp
